# Zinc

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
app/: zinc.cpp
examples/: basic.z  overview.z  simple.z  simple.zinc
include/: Program.hpp  Zinc.hpp
include/core/std/: Int32.hpp
include/ex/: InvalidFileException.hpp
include/lang/: AST.hpp  Compiler.hpp  Parser.hpp  Token.hpp  Tokenizer.hpp  Utils.hpp  ZincLang.hpp
include/lang/ast/: AST.hpp  OperandAST.hpp  OperatorAST.hpp
include/lang/pattern/: ExpressionPattern.hpp  FunctionCallPattern.hpp  Pattern.hpp  PatternList.hpp  TokenPattern.hpp
include/vm/: CPU.hpp  ExecutionEngine.hpp  Instruction.hpp  Memory.hpp  Object.hpp  Opcode.hpp  Register.hpp  VirtualMachine.hpp  ZincVM.hpp
res/test/: expr.z  expr.zinc  if.z  import.z
res/test/lang/: expr.z  func_call.z  if.z
res/test/vm/: simple_expr.z
src/: Compiler.cpp  Compiler.h  EnumDefinition.cpp  EnumDefinition.h  FunctionDefinition.cpp  FunctionDefinition.h  Instruction.cpp  Instruction.h  LanguageDefinition.cpp  LanguageDefinition.h  ObjectDefinition.cpp  ObjectDefinition.h  Opcode.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Token.cpp  Tokenizer.cpp  Tokenizer.h  Utils.cpp  Utils.h  VirtualMachine.cpp  VirtualMachine.h  Zinc.h  main.cpp
src/ast/: AST.cpp  AST.h  OperandAST.cpp  OperandAST.h  OperatorAST.cpp  OperatorAST.h
src/lang/: AST.cpp  Compiler.cpp  Parser.cpp  Token.cpp  Tokenizer.cpp  Utils.cpp
src/lang/ast/: AST.cpp  OperandAST.cpp  OperatorAST.cpp
src/lang/pattern/: ExpressionPattern.cpp  FunctionCallPattern.cpp  Pattern.cpp  PatternList.cpp  TokenPattern.cpp
src/pattern/: ArrayValuePattern.cpp  ArrayValuePattern.h  ExpressionPattern.cpp  ExpressionPattern.h  FunctionCallPattern.cpp  FunctionCallPattern.h  Pattern.cpp  Pattern.h  PatternList.cpp  PatternList.h  PatternNotFoundException.h  TokenPattern.cpp  TokenPattern.h
src/vm/: CPU.cpp  Instruction.cpp  Memory.cpp  Object.cpp  Register.cpp  VirtualMachine.cpp
testing/: lang.z
